@@ -8,7 +8,9 @@ Version 1.0.1
 - Fixed camera behaviour with pushable blocks.
 - Fixed minecart unduck on inclines.
 - Fixed quadbike dismount with jump key and allow to shoot big gun with action key.
-- Fully Decompiled HAMMER object from Tomb Raider 4
+- Fixed cobra targeting.
+- Enhanced cobra AI.
+- Fully decompiled HAMMER object from TR4.
 - Prevent title music audio from starting in a random place.
 - Update harpoon speed on room change.
 
